--- a/package.json
+++ b/package.json
@@ -8,16 +8,22 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@sentry/react-native": "^3.4.0",
     "@types/react-native-vector-icons": "^6.4.10",
     "expo": "~44.0.0",
     "expo-app-loading": "^1.3.0",
+    "expo-application": "~4.0.1",
+    "expo-constants": "~13.0.1",
+    "expo-device": "~4.1.0",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "sentry-expo": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
