--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^8.2.0",
     "@sentry/react-native": "^3.4.0",
     "@types/react-native-vector-icons": "^6.4.10",
+    "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-app-loading": "^1.3.0",
     "expo-application": "~4.0.1",
+    "expo-asset": "^8.4.6",
     "expo-constants": "~13.0.1",
     "expo-device": "~4.1.0",
     "expo-status-bar": "~1.2.0",
@@ -22,6 +25,7 @@
     "react-native": "0.64.3",
     "react-native-calendars": "^1.1281.0",
     "react-native-elements": "^3.4.2",
+    "react-native-modal": "^13.0.1",
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
