--- a/package.json
+++ b/package.json
@@ -8,35 +8,38 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/netinfo": "^8.2.0",
-    "@sentry/react-native": "^3.4.0",
-    "@types/react-native-vector-icons": "^6.4.10",
-    "axios": "^0.26.1",
-    "expo": "~44.0.0",
-    "expo-app-loading": "^1.3.0",
-    "expo-application": "~4.0.1",
-    "expo-asset": "^8.4.6",
-    "expo-constants": "~13.0.1",
-    "expo-device": "~4.1.0",
-    "expo-status-bar": "~1.2.0",
-    "expo-updates": "~0.11.6",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-calendars": "^1.1281.0",
-    "react-native-elements": "^3.4.2",
+    "@react-native-community/netinfo": "^11.3.1",
+    "@sentry/react-native": "~5.22.0",
+    "@types/react-native-vector-icons": "^6.4.18",
+    "axios": "^1.7.3",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "expo": "^51.0.26",
+    "expo-app-loading": "^2.1.1",
+    "expo-application": "~5.9.1",
+    "expo-asset": "^10.0.10",
+    "expo-constants": "~16.0.2",
+    "expo-device": "~6.0.2",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.22",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-calendars": "^1.1306.0",
+    "react-native-elements": "^3.4.3",
     "react-native-modal": "^13.0.1",
-    "react-native-svg": "12.1.1",
-    "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.1",
-    "sentry-expo": "^4.0.0"
+    "react-native-svg": "15.2.0",
+    "react-native-toast-message": "^2.2.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-web": "0.19.12",
+    "sentry-expo": "^7.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
-    "react-native-svg-transformer": "^1.0.0",
-    "typescript": "~4.3.5"
+    "@babel/core": "^7.25.2",
+    "@types/react": "~18.2.79",
+    "@types/react-native": "~0.73.0",
+    "react-native-svg-transformer": "^1.5.0",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
